--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,7 @@
 <!DOCTYPE Html>
-<html></html>
-<h1>Buster's Best Bowling Alley</h1>
+<html>
+  
+  <h1>Buster's Best Bowling Alley</h1>
+    <h2>Bet You Can't Bowl A Strike Every Time</h2>
+  
+  </html>
